--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.1.4",
+    "react-select": "^5.10.1",
     "tailwindcss": "^4.0.1"
   },
   "devDependencies": {
