--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@tailwindcss/vite": "^4.0.1",
     "axios": "^1.8.4",
     "jwt-decode": "^4.0.0",
+    "leaflet": "^1.9.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^4.0.0",
     "react-router-dom": "^7.1.4",
     "react-select": "^5.10.1",
     "tailwindcss": "^4.0.1"
